--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,7 @@
 
       <section id="activity" class="card hidden">
         <h2>Agent Activity Timeline</h2>
+        <div id="progress" class="progress-stepper"></div>
         <ul id="activity-list" class="list"></ul>
       </section>
 
