timeline and summary ui

--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,10 @@
       <section id="activity" class="card hidden">
         <h2>Agent Activity Timeline</h2>
         <div id="progress" class="progress-stepper"></div>
+        <section id="stage-summaries" class="stage-summaries hidden">
+          <h3>Stage Summaries</h3>
+          <div id="stage-summaries-list"></div>
+        </section>
         <ul id="activity-list" class="list"></ul>
       </section>
 
