--- a/public/index.html
+++ b/public/index.html
@@ -57,41 +57,13 @@
               value="8"
           /></label>
           <label class="activity-categories-field">
-            Activity Categories (choose up to 3)
-            <div class="activity-select-row">
-              <select name="activityCategory1" required aria-label="Activity category 1">
-                <option value="museums" selected>Museums</option>
-                <option value="cafes">Cafés</option>
-                <option value="walking tours">Walking Tours</option>
-                <option value="historical sites">Historical Sites</option>
-                <option value="food tours">Food Tours</option>
-                <option value="nightlife">Nightlife</option>
-                <option value="shopping">Shopping</option>
-                <option value="day trips">Day Trips</option>
-              </select>
-              <select name="activityCategory2" aria-label="Activity category 2">
-                <option value="cafes" selected>Cafés</option>
-                <option value="museums">Museums</option>
-                <option value="walking tours">Walking Tours</option>
-                <option value="historical sites">Historical Sites</option>
-                <option value="food tours">Food Tours</option>
-                <option value="nightlife">Nightlife</option>
-                <option value="shopping">Shopping</option>
-                <option value="day trips">Day Trips</option>
-                <option value="">None</option>
-              </select>
-              <select name="activityCategory3" aria-label="Activity category 3">
-                <option value="walking tours" selected>Walking Tours</option>
-                <option value="museums">Museums</option>
-                <option value="cafes">Cafés</option>
-                <option value="historical sites">Historical Sites</option>
-                <option value="food tours">Food Tours</option>
-                <option value="nightlife">Nightlife</option>
-                <option value="shopping">Shopping</option>
-                <option value="day trips">Day Trips</option>
-                <option value="">None</option>
-              </select>
-            </div>
+            Activity Categories (enter as many as you want)
+            <textarea
+              name="activityCategories"
+              rows="3"
+              required
+              placeholder="museums, cafes, walking tours"
+            >museums, cafes, walking tours</textarea>
           </label>
           <label
             >Weather Preferences
