--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
               value="8"
           /></label>
           <label class="activity-categories-field">
-            Activity Categories (enter as many as you want)
+            Activity Categories 
             <textarea
               name="activityCategories"
               rows="3"
