--- a/public/index.html
+++ b/public/index.html
@@ -56,15 +56,14 @@
               required
               value="8"
           /></label>
-          <label class="activity-categories-field">
-            Activity Categories 
-            <textarea
+          <label
+            >Activity Categories
+            <input
               name="activityCategories"
-              rows="3"
               required
               placeholder="museums, cafes, walking tours"
-            >museums, cafes, walking tours</textarea>
-          </label>
+              value="museums, cafes, walking tours"
+          /></label>
           <label
             >Weather Preferences
             <input
